gnome-shell: Disable the transition to fix the jumpy close button of windows (fix #147)

--- a/src/gnome-shell/3.18/gnome-shell-light.css
+++ b/src/gnome-shell/3.18/gnome-shell-light.css
@@ -1521,6 +1521,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-close {
+  transition-duration: 0ms;
   height: 36px;
   width: 36px;
   -st-background-image-shadow: 0 1px 1.5px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
