--- a/src/gnome-shell/3.24/gnome-shell-light-compact.css
+++ b/src/gnome-shell/3.24/gnome-shell-light-compact.css
@@ -1563,6 +1563,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-close {
+  transition-duration: 0ms;
   height: 32px;
   width: 32px;
   -st-background-image-shadow: 0 1px 1.5px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
