--- a/src/gnome-shell/3.24/sass/_common.scss
+++ b/src/gnome-shell/3.24/sass/_common.scss
@@ -1278,6 +1278,7 @@ StScrollBar {
 //close buttons
 
 .window-close {
+  transition-duration: 0ms; // FIXME: unless disable the transition, button will distort when hovering
   height: $medium_size;
   width: $medium_size;
   -st-background-image-shadow: $shadow_1;
